core: add data structures for job artifacts

--- a/ci-monitor-core/Cargo.toml
+++ b/ci-monitor-core/Cargo.toml
@@ -11,3 +11,5 @@ edition.workspace = true
 [dependencies]
 digest = "0.10"
 sha2 = "0.10"
+
+chrono = { version = "~0.4", default-features = false }
