persistence: add a trait for blob storage

--- a/ci-monitor-persistence/Cargo.toml
+++ b/ci-monitor-persistence/Cargo.toml
@@ -10,4 +10,6 @@ repository.workspace = true
 edition.workspace = true
 
 [dependencies]
+thiserror = "1.0.4"
+
 ci-monitor-core = { version = "0.1.0", path = "../ci-monitor-core" }
