--- a/ci-monitor-persistence/Cargo.toml
+++ b/ci-monitor-persistence/Cargo.toml
@@ -12,4 +12,5 @@ edition.workspace = true
 [dependencies]
 thiserror = "1.0.4"
 
+async-trait = "~0.1.9"
 ci-monitor-core = { version = "0.1.0", path = "../ci-monitor-core" }
