--- a/ci-monitor-persistence/Cargo.toml
+++ b/ci-monitor-persistence/Cargo.toml
@@ -9,8 +9,13 @@ license.workspace = true
 repository.workspace = true
 edition.workspace = true
 
+[dev-dependencies]
+tempfile = "^3.2.0"
+
 [dependencies]
+serde = { version = "^1.0", default-features = false, features = ["derive"] }
 thiserror = "1.0.4"
+toml = { version = "~0.8.14", default-features = false, features = ["parse", "display"] }
 
 async-trait = "~0.1.9"
 ci-monitor-core = { version = "0.1.0", path = "../ci-monitor-core" }
