forge: add basic `ForgeCore` trait

--- a/ci-monitor-forge/Cargo.toml
+++ b/ci-monitor-forge/Cargo.toml
@@ -9,3 +9,4 @@ repository.workspace = true
 edition.workspace = true
 
 [dependencies]
+ci-monitor-core = { version = "0.1.0", path = "../ci-monitor-core" }
