--- a/ci-monitor-core/Cargo.toml
+++ b/ci-monitor-core/Cargo.toml
@@ -12,5 +12,6 @@ edition.workspace = true
 derive_builder = "0.20"
 digest = "0.10"
 sha2 = "0.10"
+perfect-derive = "0.1.3"
 
 chrono = { version = "~0.4", default-features = false }
