--- a/ci-monitor-persistence/Cargo.toml
+++ b/ci-monitor-persistence/Cargo.toml
@@ -13,6 +13,7 @@ edition.workspace = true
 tempfile = "^3.2.0"
 
 [dependencies]
+perfect-derive = "0.1.3"
 serde = { version = "^1.0", default-features = false, features = ["derive"] }
 thiserror = "1.0.4"
 toml = { version = "~0.8.14", default-features = false, features = ["parse", "display"] }
