--- a/ci-monitor-gitlab/Cargo.toml
+++ b/ci-monitor-gitlab/Cargo.toml
@@ -13,6 +13,7 @@ chrono = { version = "~0.4", default-features = false }
 ci-monitor-core = { version = "0.1.0", path = "../ci-monitor-core" }
 ci-monitor-forge = { version = "0.1.0", path = "../ci-monitor-forge" }
 ci-monitor-persistence = { version = "0.1.0", path = "../ci-monitor-persistence" }
+futures-util = { version = "0.3.30", default-features = false }
 gitlab = { version = "0.1700.1", default-features = false, features = ["client_api"] }
 serde = { version = "^1.0", default-features = false, features = ["derive"] }
 
