--- a/ci-monitor/Cargo.toml
+++ b/ci-monitor/Cargo.toml
@@ -10,6 +10,7 @@ edition.workspace = true
 
 [dependencies]
 clap = { version = "4", features = ["cargo"] }
+ci-monitor-forge = { version = "0.1", path = "../ci-monitor-forge" }
 ci-monitor-gitlab = { version = "0.1", path = "../ci-monitor-gitlab" }
 ci-monitor-persistence = { version = "0.1", path = "../ci-monitor-persistence" }
 tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
