ci-monitor: add a rate limiter
There's a thundering herd on the GitLab instance when using this tool;
add a rate limiter to ensure we're not running through tasks too often.

--- a/ci-monitor/Cargo.toml
+++ b/ci-monitor/Cargo.toml
@@ -13,4 +13,5 @@ clap = { version = "4", features = ["cargo"] }
 ci-monitor-forge = { version = "0.1", path = "../ci-monitor-forge" }
 ci-monitor-gitlab = { version = "0.1", path = "../ci-monitor-gitlab" }
 ci-monitor-persistence = { version = "0.1", path = "../ci-monitor-persistence" }
+governor = "0.6"
 tokio = { version = "1", default-features = false, features = ["macros", "rt", "rt-multi-thread"] }
