--- a/ci-monitor-persistence/Cargo.toml
+++ b/ci-monitor-persistence/Cargo.toml
@@ -13,6 +13,7 @@ edition.workspace = true
 tempfile = "^3.2.0"
 
 [dependencies]
+chrono = { version = "~0.4", default-features = false, features = ["serde"] }
 perfect-derive = "0.1.3"
 serde = { version = "^1.0", default-features = false, features = ["derive"] }
 serde_json = "1.0.25"
